--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Demo Pizza Website, by Scott Sykora</title>
-    <link href="/stylesheet/styles.css" rel="stylesheet">
+    <link href="stylesheet/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -26,10 +26,10 @@
         <p>Pizza was originally brought to the United States by soldiers returning from Italy during WW2.</p>
         <p>The word "pizza" is Italian for "pie".</p>
         <p>In the United States, approximately 350 slices of pizza are eaten per second!</p>
-        <img src="/images/cook.jpg" alt="chef making pizza">
+        <img src="images/cook.jpg" alt="chef making pizza">
       </aside>
       <main>
-        <img id="floatleft" src="/images/pizza_above_edit.jpg" alt="beautiful pizza on cutting board">
+        <img id="floatleft" src="images/pizza_above_edit.jpg" alt="beautiful pizza on cutting board">
         <h2>Welcome to Pizza University!</h2>
         <article>
           <p>One of the most well loved foods in the world is pizza. It can be everything from cheese only, cheese with vegetables, to fully loaded with multiple kinds of meats and vegetables.  From thick crust to thin crust, and regional styles like New York, New Jersey tomato pies, New Haven Clam, and Detroit Red Top. Further variations include Sicilian, Californian, and Napoletana.  The Italian have at least 7 regional varieties as well. There are even desert "pies". What is not to like?</p>
