--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Demo Pizza Website, by Scott Sykora</title>
-    <link href="/stylesheet/styles.css" rel="stylesheet">
+    <link href="stylesheet/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
