--- a/ingredients.html
+++ b/ingredients.html
@@ -27,12 +27,12 @@
         <img src="/images/cook.jpg" alt="chef making pizza">
       </aside>
       <main>
-        <img id="floatleft" src="/images/dough_edit.jpg" alt="pizza dough balls">
+        <img id="floatleft" src="images/dough_edit.jpg" alt="pizza dough balls">
         <h2>Ingredient Information</h2>
         <p>Making good pizza is only as good as the ingredients.  There are not many ingredients in a pizza, so what you use needs to be the best you can get. A few ingredients that make good pizza are: high protein flour, high quality tomato products (preferably from Italy or California), quality Italian or Wisconsin Cheese and meat. Garlic oil is also a great finishing element to a great pizza.</p>
           
         <p>One of the key ingredients to making a pizza pie that is digestible and sets it apart from store brands is the crust.  The flour needs to be above 12 percent protein, so that a more traditional long ageing of the dough can take place.  Ageing the dough for 72 hours in cold fermentation allows for the yeast to break down the flour for greater digestiblility and better flavor.  We will also use fine sea salt and diastatic malt to add a nutty sweetness to the dough. We will also weigh out the ingredients so that our recipe is consistent time after time.</p>
-        <img id="floatright" src="/images/ingredients_edit.jpg" alt="pizza ingredients">
+        <img id="floatright" src="images/ingredients_edit.jpg" alt="pizza ingredients">
         <p>The sauce should be made ahead a day or so.  This will allow the flavors to combine well. The sauce can be as easy as a can of whole peeled or crushed tomatoes, and pour into food a processor or blender and pulse. Add some salt, shaved garlic, and dried oregano to taste.  </p>
         <p>For simplicity, a ready made pizza crust can be used; or in bigger markets ready to use pizza dough can be purchased.  Here is a great sample pizza dough recipe to get you started: </p>
         <h3>Basic Pizza Dough</h3>
