--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Welcome to Pizza University!</h2>
         <article>
           <p>One of the most well loved foods in the world is pizza. It can be everything from cheese only, cheese with vegetables, to fully loaded with multiple kinds of meats and vegetables.  From thick crust to thin crust, and regional styles like New York, New Jersey tomato pies, New Haven Clam, and Detroit Red Top. Further variations include Sicilian, Californian, and Napoletana.  The Italian have at least 7 regional varieties as well. There are even desert "pies". What is not to like?</p>
-          <img id="floatright" src="/images/above_edit.jpg" alt="rustic hand crafted pizza">
+          <img id="floatright" src="images/above_edit.jpg" alt="rustic hand crafted pizza">
           <p>Pizza is fairly simple. It is just dough, tomatoes, cheese, and toppings.  But like a lot of things, you can take the craft of those ingredients as far as you want to take them. You can take the rest of your life refining these skills!</p>
           <p>Learning the craft of making pizza can be made better with a few extra steps, the right tools, a little extra time, and more practice. But if you are up for the challenge, the reward is great.</p>
           
