--- a/ingredients.html
+++ b/ingredients.html
@@ -24,7 +24,7 @@
         <h4>Further Information</h4>
         <p>Want to learn more about making World Class pizza?</p>
         <p>Read the book: Pizza Bible, by Tony Gemignani, the first and only Triple Crown winner for baking at the International Pizza Championships in Italy. The most award winning man in pizza.</p>
-        <img src="/images/cook.jpg" alt="chef making pizza">
+        <img src="images/cook.jpg" alt="chef making pizza">
       </aside>
       <main>
         <img id="floatleft" src="images/dough_edit.jpg" alt="pizza dough balls">
