--- a/technique.html
+++ b/technique.html
@@ -26,7 +26,7 @@
         <p>Pizza as we know it today originally came from Naples, Italy around 1830.</p>
         <p>Annual pizza sales in the United States is around 28 billion per year.</p>
         <p>Thanksgiving Day is when the least amount of pizza is eaten in the United States.</p>
-        <img src="/images/cook.jpg" alt="chef making pizza">
+        <img src="images/cook.jpg" alt="chef making pizza">
       </aside>
       <main>
         <img id="floatleft" src="images/technique_edit.jpg" alt="busy pizza kitchen">
