--- a/tools.html
+++ b/tools.html
@@ -23,7 +23,7 @@
       <aside class="mobile">
         <h4>Further Information</h4>
         <p>Find information on the new Baking Steel product at <a href="https://www.bakingsteel.com">Bakingsteel.com</a></p>
-        <img src="/images/cook.jpg" alt="chef making pizza">
+        <img src="images/cook.jpg" alt="chef making pizza">
       </aside>
       <main>
         <img id="floatright" src="images/tools_edit2.jpg" alt="tools for making pizza" >
